--- a/trunk/WIP/Sources/Android/TaxiNetMR/res/layout/activity_main.xml
+++ b/trunk/WIP/Sources/Android/TaxiNetMR/res/layout/activity_main.xml
@@ -1,58 +1,26 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/item_detail_container"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    tools:ignore="MergeRootFrame" >
+    android:layout_height="match_parent" >
+
+    <!-- Framelayout to display Fragments -->
 
     <FrameLayout
-        android:id="@+id/main"
+        android:id="@+id/frame_container"
         android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <!-- Listview to display slider menu -->
+
+    <ListView
+        android:id="@+id/list_slidermenu"
+        android:layout_width="240dp"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" >
+        android:layout_gravity="start"
+        android:background="@color/list_background"
+        android:choiceMode="singleChoice"
+        android:divider="@color/list_divider"
+        android:dividerHeight="1dp"
+        android:listSelector="@drawable/list_selector" />
 
-        <FrameLayout
-            android:id="@+id/content"
-            android:layout_width="match_parent"
-            android:layout_height="380dp">
-
-        </FrameLayout>
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/mainbar"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <Button
-                android:id="@+id/btcall"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginRight="0dp"
-                android:layout_weight="2.37"
-                android:text="Call Taxi"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/btlogin"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="0.60"
-                android:hint="Click to call Taxi"
-                android:text="Login"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-    </FrameLayout>
-
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
