--- a/WIP/Sources/Android/TaxiNetMD/res/menu/main.xml
+++ b/WIP/Sources/Android/TaxiNetMD/res/menu/main.xml
@@ -1,9 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+    <!-- Search / will display always -->
+    <item android:id="@+id/taxi"
+          android:title="@string/taxi"
+          android:showAsAction="never"/>
 
 </menu>
