--- a/trunk/WIP/Sources/Android/TaxiNetMD/res/menu/main.xml
+++ b/trunk/WIP/Sources/Android/TaxiNetMD/res/menu/main.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <!-- Search / will display always -->
-    <item android:id="@+id/taxi"
-          android:title="@string/taxi"
-          android:showAsAction="never"/>
+
+    <item
+        android:id="@+id/taxi"
+        android:title="@string/account"/>
+    <item
+        android:id="@+id/dm"
+        android:showAsAction="always"
+        android:title="@string/add"/>
 
 </menu>
