--- a/trunk/WIP/Sources/Android/TaxiNetMR/res/layout/item_drawer.xml
+++ b/trunk/WIP/Sources/Android/TaxiNetMR/res/layout/item_drawer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="wrap_content"
     android:background="@drawable/list_selector" >
 
     <RelativeLayout
@@ -59,5 +59,7 @@
             android:textColor="@color/list_item_title"
             android:textSize="15sp" />
     </RelativeLayout>
+
+    
 
 </RelativeLayout>
