--- a/trunk/WIP/Sources/Android/TaxiNetMR/res/values/string.xml
+++ b/trunk/WIP/Sources/Android/TaxiNetMR/res/values/string.xml
@@ -1,6 +1,6 @@
 <resources>
 
-        <string name="app_name">TaxiNet</string>
+    <string name="app_name">TaxiNet</string>
     <string name="title_main">TaxiNet Home</string>
     <string name="title_activity_call_dialog">Call Options</string>
     <string name="action_settings">Settings</string>
@@ -25,11 +25,11 @@
     <string name="account">Account</string>
     <string name="trip_history">Trip History</string>
     <string name="save">Save</string>
-	<string name="edit">Edit</string>
-	<string name="cancel">Cancel</string>
-	<string name="term">Term</string>
-	<string name="reload">Re-Load</string>
-	<string name="driver">Driver</string>
+    <string name="edit">Edit</string>
+    <string name="cancel">Cancel</string>
+    <string name="term">Term</string>
+    <string name="reload">Re-Load</string>
+    <string name="driver">Driver</string>
     <string name="action_edit">Edit</string>
     <string name="drawer_open">Slider Menu Opened</string>
     <string name="drawer_close">Slider Menu Closed</string>
@@ -61,8 +61,11 @@
     <string name="time">03:12</string>
     <string name="note">Note</string>
     <string name="desc_list_item_icon">Note</string>
-	
-	<!-- Nav Drawer Menu Items -->
+    <string name="login">Login</string>
+    <string name="forgot_password">Forgor password</string>
+    <string name="register">Register</string>
+
+    <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
         <item>Bản đồ</item>
         <item>Hành trình</item>
